@@ -68,8 +68,8 @@ import org.eclipse.linuxtools.docker.core.IDockerHostConfig;
 import org.eclipse.linuxtools.docker.core.IDockerImage;
 import org.eclipse.linuxtools.docker.core.IDockerImageInfo;
 import org.eclipse.linuxtools.docker.core.IDockerImageListener;
-import org.eclipse.linuxtools.docker.core.IDockerImageSearchResult;
 import org.eclipse.linuxtools.docker.core.IDockerPortBinding;
+import org.eclipse.linuxtools.docker.core.IDockerPortMapping;
 import org.eclipse.linuxtools.docker.core.IDockerProgressHandler;
 import org.eclipse.linuxtools.docker.core.ILogger;
 import org.eclipse.linuxtools.docker.core.Messages;
@@ -93,7 +93,6 @@ import com.spotify.docker.client.messages.HostConfig;
 import com.spotify.docker.client.messages.HostConfig.LxcConfParameter;
 import com.spotify.docker.client.messages.Image;
 import com.spotify.docker.client.messages.ImageInfo;
-import com.spotify.docker.client.messages.ImageSearchResult;
 import com.spotify.docker.client.messages.Info;
 import com.spotify.docker.client.messages.PortBinding;
 import com.spotify.docker.client.messages.Version;
@@ -111,32 +110,12 @@ public class DockerConnection implements IDockerConnection {
 
 	public static class Defaults {
 
-		public static final String DEFAULT_UNIX_SOCKET_PATH = "unix:///var/run/docker.sock";
+		public static final String DEFAULT_UNIX_SOCKET_PATH = "unix:///var/run/docker.sock"; //$NON-NLS-1$
 
 		private String name = Messages.Default_Name;
 		private final Map<EnumDockerConnectionSettings, Object> settings = new HashMap<>();
 
 		public Defaults() throws DockerException {
-			File scriptFile = Activator.getDefault().getBundle()
-					.getDataFile("script.sh"); //$NON-NLS-1$
-			if (!scriptFile.exists()) {
-				InputStream is = DockerConnection.class
-						.getResourceAsStream("/resources/script.sh"); //$NON-NLS-1$
-				FileOutputStream fo;
-				try {
-					byte[] buff = new byte[1024];
-					fo = new FileOutputStream(scriptFile);
-					int n;
-					while ((n = is.read(buff)) > 0) {
-						fo.write(buff, 0, n);
-					}
-					fo.close();
-					is.close();
-					scriptFile.setExecutable(true);
-				} catch (IOException e) {
-					Activator.logErrorMessage(e.getMessage());
-				}
-			}
 			// first, looking for a Unix socket at /var/run/docker.sock
 			if (defaultsWithUnixSocket() || defaultsWithSystemEnv()
 					|| defaultWithShellEnv()) {
@@ -163,7 +142,7 @@ public class DockerConnection implements IDockerConnection {
 		 *         {@code false} otherwise.
 		 */
 		private boolean defaultsWithUnixSocket() {
-			final File unixSocketFile = new File("/var/run/docker.sock");
+			final File unixSocketFile = new File("/var/run/docker.sock"); //$NON-NLS-1$
 			if (unixSocketFile.exists() && unixSocketFile.canRead()) {
 				try {
 					final UnixSocketAddress address = new UnixSocketAddress(
@@ -190,15 +169,15 @@ public class DockerConnection implements IDockerConnection {
 		 *         {@code false} otherwise.
 		 */
 		private boolean defaultsWithSystemEnv() {
-			final String dockerHostEnv = System.getenv("DOCKER_HOST");
+			final String dockerHostEnv = System.getenv("DOCKER_HOST"); //$NON-NLS-1$
 			if (dockerHostEnv != null) {
 				settings.put(BINDING_MODE, TCP_CONNECTION);
 				settings.put(TCP_HOST, dockerHostEnv);
-				final String tlsVerifyEnv = System.getenv("DOCKER_TLS_VERIFY");
+				final String tlsVerifyEnv = System.getenv("DOCKER_TLS_VERIFY"); //$NON-NLS-1$
 				if (tlsVerifyEnv != null && tlsVerifyEnv.equals("1")) {
 					settings.put(TCP_TLS_VERIFY, Boolean.TRUE);
 					final String dockerCertPathEnv = System
-							.getenv("DOCKER_CERT_PATH");
+							.getenv("DOCKER_CERT_PATH"); //$NON-NLS-1$
 					if (dockerCertPathEnv != null) {
 						settings.put(TCP_CERT_PATH, dockerCertPathEnv);
 					}
@@ -221,11 +200,18 @@ public class DockerConnection implements IDockerConnection {
 		 */
 		private boolean defaultWithShellEnv() throws DockerException {
 			try {
-				// FIXME need to verify the OS and decide which script to run
-				File scriptFile = Activator.getDefault().getBundle()
-						.getDataFile("script.sh"); //$NON-NLS-1$
-				final Process process = Runtime.getRuntime()
-						.exec(new String[] { scriptFile.getAbsolutePath() });
+				final String connectionSettingsDetectionScriptName = getConnectionSettingsDetectionScriptName();
+				if (connectionSettingsDetectionScriptName == null) {
+					Activator.log(new Status(IStatus.WARNING,
+							Activator.PLUGIN_ID,
+							Messages.Docker_No_Settings_Description_Script));
+					return false;
+				}
+				final File connectionSettingsDetectionScript = getConnectionSettingsDetectionScript(
+						connectionSettingsDetectionScriptName);
+				final String[] cmdArray = getConnectionSettingsDetectionCommandArray(
+						connectionSettingsDetectionScript);
+				final Process process = Runtime.getRuntime().exec(cmdArray);
 				process.waitFor();
 				if (process.exitValue() == 0) {
 					final InputStream processInputStream = process
@@ -234,20 +220,20 @@ public class DockerConnection implements IDockerConnection {
 					Properties dockerSettings = new Properties();
 					dockerSettings.load(processInputStream);
 					settings.put(BINDING_MODE, TCP_CONNECTION);
-					if (dockerSettings.containsKey("DOCKER_HOST")) {
-						settings.put(TCP_HOST, dockerSettings
-								.get("DOCKER_HOST").toString());
+					if (dockerSettings.containsKey("DOCKER_HOST")) { //$NON-NLS-1$
+						settings.put(TCP_HOST,
+								dockerSettings.get("DOCKER_HOST").toString()); //$NON-NLS-1$
 					}
-					if (dockerSettings.containsKey("DOCKER_CERT_PATH")) {
+					if (dockerSettings.containsKey("DOCKER_CERT_PATH")) { //$NON-NLS-1$
 						settings.put(TCP_CERT_PATH,
-								dockerSettings.get("DOCKER_CERT_PATH")
+								dockerSettings.get("DOCKER_CERT_PATH") //$NON-NLS-1$
 										.toString());
 					}
-					if (dockerSettings.containsKey("DOCKER_TLS_VERIFY")) {
-						settings.put(
-								TCP_TLS_VERIFY,
-								Boolean.valueOf(dockerSettings
-										.get("DOCKER_TLS_VERIFY").toString()
+					if (dockerSettings.containsKey("DOCKER_TLS_VERIFY")) { //$NON-NLS-1$
+						settings.put(TCP_TLS_VERIFY,
+								Boolean.valueOf(
+										dockerSettings.get("DOCKER_TLS_VERIFY") //$NON-NLS-1$
+												.toString()
 										.equals("1")));
 					}
 					return true;
@@ -255,25 +241,96 @@ public class DockerConnection implements IDockerConnection {
 					// log what happened if the process did not end as expected
 					final InputStream processErrorStream = process
 							.getErrorStream();
-					final String errorMessage = streamToString(
-							processErrorStream);
+					final String errorMessage = streamToString(processErrorStream);
 					Activator.log(new Status(IStatus.ERROR,
 							Activator.PLUGIN_ID, errorMessage));
 				}
-			} catch (IOException | InterruptedException e) {
+			} catch (IOException | IllegalArgumentException
+					| InterruptedException e) {
 				throw new DockerException(Messages.Retrieve_Default_Settings_Failure, e);
 			}
 			return false;
 		}
 
+		/**
+		 * @param script
+		 *            the script to execute
+		 * @return the OS-specific command to run the connection settings
+		 *         detection script.
+		 */
+		private String[] getConnectionSettingsDetectionCommandArray(
+				final File script) {
+			final String osName = System.getProperty("os.name"); //$NON-NLS-1$
+			if (osName.toLowerCase().startsWith("win")) { //$NON-NLS-1$
+				return new String[] { "cmd.exe", "/C", //$NON-NLS-1$ //$NON-NLS-2$
+						script.getAbsolutePath() };
+			} else if (osName.toLowerCase().startsWith("mac") //$NON-NLS-1$
+					|| osName.toLowerCase().contains("linux") //$NON-NLS-1$
+					|| osName.toLowerCase().contains("nix")) { //$NON-NLS-1$
+				return new String[] { script.getAbsolutePath() };
+			} else {
+				return null;
+			}
+		}
+
+		/**
+		 * Finds the script file in the data directory of the bundle given its
+		 * name, or creates it from the 'resources' dir in the bundle if it was
+		 * not found in the data dir.
+		 * 
+		 * @param scriptName
+		 *            the name of the script to load in the data dir or in the
+		 *            'resources' dir in the bundle
+		 * @return the script {@link File}
+		 */
+		private File getConnectionSettingsDetectionScript(
+				final String scriptName) {
+			final File script = Activator.getDefault().getBundle()
+					.getDataFile(scriptName);
+			if (script != null && !script.exists()) {
+				try (final FileOutputStream output = new FileOutputStream(
+						script);
+						final InputStream is = DockerConnection.class
+								.getResourceAsStream(
+										"/resources/" + scriptName)) { //$NON-NLS-1$
+					byte[] buff = new byte[1024];
+					int n;
+					while ((n = is.read(buff)) > 0) {
+						output.write(buff, 0, n);
+					}
+					script.setExecutable(true);
+				} catch (IOException e) {
+					Activator.logErrorMessage(e.getMessage());
+				}
+			}
+			return script;
+		}
+
+		/**
+		 * @return the name of the script to run, depending on the OS (Windows,
+		 *         MAc, *Nix)
+		 */
+		private String getConnectionSettingsDetectionScriptName() {
+			final String osName = System.getProperty("os.name"); //$NON-NLS-1$
+			if (osName.toLowerCase().startsWith("win")) { //$NON-NLS-1$
+				return "script.bat"; //$NON-NLS-1$
+			} else if (osName.toLowerCase().startsWith("mac") //$NON-NLS-1$
+					|| osName.toLowerCase().contains("linux") //$NON-NLS-1$
+					|| osName.toLowerCase().contains("nix")) { //$NON-NLS-1$
+				return "script.sh";//$NON-NLS-1$
+			} else {
+				return null;
+			}
+		}
+
 		private String streamToString(InputStream stream) {
-			BufferedReader buff = new BufferedReader(
-					new InputStreamReader(stream));
+			BufferedReader buff = new BufferedReader(new InputStreamReader(
+					stream));
 			StringBuffer res = new StringBuffer();
 			String line = "";
 			try {
 				while ((line = buff.readLine()) != null) {
-					res.append(System.getProperty("line.separator"));
+					res.append(System.getProperty("line.separator")); //$NON-NLS-1$
 					res.append(line);
 				}
 				buff.close();
@@ -368,7 +425,7 @@ public class DockerConnection implements IDockerConnection {
 
 		public Builder tcpCertPath(final String tcpCertPath) {
 			this.tcpCertPath = tcpCertPath;
-			if (this.tcpHost != null) {
+			if (tcpCertPath != null) {
 				this.tcpHost = tcpHost.replace("http://", "https://");
 			}
 			return this;
@@ -498,7 +555,7 @@ public class DockerConnection implements IDockerConnection {
 						addContainerListener(dcrm);
 					}
 				}
-			} catch (DockerCertificateException e) {
+			} catch (Exception e) {
 				throw new DockerException(Messages.Open_Connection_Failure, e);
 			}
 		}
@@ -599,7 +656,8 @@ public class DockerConnection implements IDockerConnection {
 
 	}
 
-	public void notifyContainerListeners(List<IDockerContainer> list) {
+	public void notifyContainerListeners(DockerConnection manager,
+			List<IDockerContainer> list) {
 		if (containerListeners != null) {
 			Object[] listeners = containerListeners.getListeners();
 			for (int i = 0; i < listeners.length; ++i) {
@@ -764,6 +822,12 @@ public class DockerConnection implements IDockerConnection {
 			// core format in case we decide to change the underlying engine
 			// in the future.
 			for (Container c : list) {
+				final List<Container.PortMapping> ports = c.ports();
+				final List<IDockerPortMapping> portMappings = new ArrayList<>();
+				for (Container.PortMapping port : ports) {
+					final DockerPortMapping portMapping = new DockerPortMapping(port.getPrivatePort(), port.getPublicPort(), port.getType(), port.getIp());
+					portMappings.add(portMapping);
+				}
 				// For containers that have exited, make sure we aren't tracking
 				// them with a logging thread.
 				if (c.status().startsWith(Messages.Exited_specifier)) {
@@ -772,13 +836,15 @@ public class DockerConnection implements IDockerConnection {
 						loggingThreads.remove(c.id());
 					}
 				}
-				dclist.add(new DockerContainer(this, c));
+				dclist.add(new DockerContainer(this, c.id(), c.image(), c
+						.command(), c.created(), c.status(), c.sizeRw(), c
+						.sizeRootFs(), portMappings, c.names()));
 			}
 			containers = dclist;
 		}
 		// perform notification outside of containerLock so we don't have a View
 		// causing a deadlock
-		notifyContainerListeners(dclist);
+		notifyContainerListeners(this, dclist);
 		return dclist;
 	}
 
@@ -837,7 +903,8 @@ public class DockerConnection implements IDockerConnection {
 			imageListeners.remove(listener);
 	}
 
-	public void notifyImageListeners(List<IDockerImage> list) {
+	public void notifyImageListeners(DockerConnection manager,
+			List<IDockerImage> list) {
 		if (imageListeners != null) {
 			Object[] listeners = imageListeners.getListeners();
 			for (int i = 0; i < listeners.length; ++i) {
@@ -877,8 +944,7 @@ public class DockerConnection implements IDockerConnection {
 		return imagesLoaded;
 	}
 
-	@Override
-	public List<IDockerImage> listImages() throws DockerException {
+	private List<IDockerImage> listImages() throws DockerException {
 		final List<IDockerImage> dilist = new ArrayList<>();
 		synchronized (imageLock) {
 			List<Image> rawImages = null;
@@ -906,24 +972,17 @@ public class DockerConnection implements IDockerConnection {
 						&& imageParentIds.contains(rawImage.id());
 				final boolean danglingImage = !taggedImage
 						&& !intermediateImage;
-				// FIXME: if an image with a unique ID belongs to multiple repos, we should
-				// probably have multiple instances of IDockerImage
-				final Map<String, List<String>> repoTags = DockerImage.extractTagsByRepo(rawImage.repoTags());
-				for(Entry<String, List<String>> entry : repoTags.entrySet()) {
-					final String repo = entry.getKey();
-					final List<String> tags = entry.getValue();
-					dilist.add(new DockerImage(this, rawImage
-							.repoTags(), repo, tags, rawImage.id(), rawImage.parentId(),
-							rawImage.created(), rawImage.size(), rawImage
-									.virtualSize(), intermediateImage,
-							danglingImage));
-				}
+				dilist.add(new DockerImage(this, rawImage
+						.repoTags(), rawImage.id(), rawImage.parentId(),
+						rawImage.created(), rawImage.size(), rawImage
+								.virtualSize(), intermediateImage,
+						danglingImage));
 			}
 			images = dilist;
 		}
 		// Perform notification outside of lock so that listener doesn't cause a
 		// deadlock to occur
-		notifyImageListeners(dilist);
+		notifyImageListeners(this, dilist);
 		return dilist;
 	}
 
@@ -940,22 +999,6 @@ public class DockerConnection implements IDockerConnection {
 			throw f;
 		}
 	}
-	
-	@Override
-	public List<IDockerImageSearchResult> searchImages(final String term) throws DockerException {
-		try {
-			final List<ImageSearchResult> searchResults = client.searchImages(term);
-			final List<IDockerImageSearchResult> results = new ArrayList<>();
-			for(ImageSearchResult r : searchResults) {
-				results.add(new DockerImageSearchResult(r.getDescription(), r.isOfficial(), r.isAutomated(), r.getName(), r.getStarCount()));
-			}
-			return results;
-		} catch (com.spotify.docker.client.DockerException | InterruptedException e) {
-			throw new DockerException(e);
-		}
-	}
-	
-	
 
 	@Override
 	public void pushImage(final String name, final IDockerProgressHandler handler)
@@ -1032,59 +1075,41 @@ public class DockerConnection implements IDockerConnection {
 		DockerConnectionManager.getInstance().saveConnections();
 	}
 
-
 	@Override
 	public String createContainer(final IDockerContainerConfig c)
 			throws DockerException, InterruptedException {
-		return createContainer(c, null);
-	}
-
-	@Override
-	public String createContainer(final IDockerContainerConfig c,
-			final String containerName)
-			throws DockerException, InterruptedException {
 		ContainerConfig.Builder builder = ContainerConfig.builder()
 				.hostname(c.hostname()).domainname(c.domainname())
-				.user(c.user()).memory(c.memory())
-				.memorySwap(c.memorySwap()).cpuShares(c.cpuShares())
-				.cpuset(c.cpuset()).attachStdin(c.attachStdin())
-				.attachStdout(c.attachStdout())
+				.user(c.user()).memory(c.memory()).memorySwap(c.memorySwap())
+				.cpuShares(c.cpuShares()).cpuset(c.cpuset())
+				.attachStdin(c.attachStdin()).attachStdout(c.attachStdout())
 				.attachStderr(c.attachStderr()).tty(c.tty())
-				.openStdin(c.openStdin()).stdinOnce(c.stdinOnce())
-				.cmd(c.cmd()).image(c.image())
-				.workingDir(c.workingDir())
+				.openStdin(c.openStdin()).stdinOnce(c.stdinOnce()).cmd(c.cmd())
+				.image(c.image()).workingDir(c.workingDir())
 				.networkDisabled(c.networkDisabled());
 		// For those fields that are Collections and not set, they will be null.
 		// We can't use their values to set the builder's fields as they are
 		// expecting non-null Collections to copy over. In those cases, we just
 		// don't set those fields in the builder.
-		if (c.portSpecs() != null) {
+		if (c.portSpecs() != null)
 			builder = builder.portSpecs(c.portSpecs());
-		}
-		if (c.exposedPorts() != null) {
+		if (c.exposedPorts() != null)
 			builder = builder.exposedPorts(c.exposedPorts());
-		}
-		if (c.env() != null) {
+		if (c.env() != null)
 			builder = builder.env(c.env());
-		}
-		if (c.volumes() != null) {
+		if (c.volumes() != null)
 			builder = builder.volumes(c.volumes());
-		}
-		if (c.entrypoint() != null) {
+		if (c.entrypoint() != null)
 			builder = builder.entrypoint(c.entrypoint());
-		}
-		if (c.onBuild() != null) {
+		if (c.onBuild() != null)
 			builder = builder.onBuild(c.onBuild());
-		}
+
+		final ContainerConfig config = builder.build();
 
 		try {
 			// create container with default random name
-			final ContainerCreation creation = client
-					.createContainer(builder.build(),
-					containerName);
+			final ContainerCreation creation = client.createContainer(config);
 			final String id = creation.id();
-			// force a refresh of the current containers to include the new one
-			listContainers();
 			return id;
 		} catch (com.spotify.docker.client.DockerRequestException e) {
 			throw new DockerException(e.message());
@@ -1107,7 +1132,7 @@ public class DockerConnection implements IDockerConnection {
 				}
 			}
 			// list of containers needs to be updated once the given container is stopped, to reflect it new state.
-			listContainers();
+			listContainers(); 
 		} catch (ContainerNotFoundException e) {
 			throw new DockerContainerNotFoundException(e);
 		} catch (com.spotify.docker.client.DockerRequestException e) {
@@ -1291,14 +1316,13 @@ public class DockerConnection implements IDockerConnection {
 			// start container with host config
 			client.startContainer(id, builder.build());
 			// Log the started container based on user preference
-			// Log the started container based on user preference
-			// Log the started container based on user preference
 			IEclipsePreferences preferences = InstanceScope.INSTANCE
 					.getNode("org.eclipse.linuxtools.docker.ui"); //$NON-NLS-1$
 
 			boolean autoLog = preferences.getBoolean("autoLogOnStart", true); //$NON-NLS-1$
 
 			if (autoLog && !getContainerInfo(id).config().tty()) {
+				// display logs for container
 				synchronized (loggingThreads) {
 					LogThread t = loggingThreads.get(loggingId);
 					if (t == null || !t.isAlive()) {
@@ -1329,7 +1353,6 @@ public class DockerConnection implements IDockerConnection {
 			client.commitContainer(id, repo, tag, info.config(), comment,
 					author);
 			// update images list
-			listImages();
 			getImages(true);
 		} catch (com.spotify.docker.client.DockerRequestException e) {
 			throw new DockerException(e.message());
